# audio2llm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
audio2llm/: __init__.py  cli.py  midi.py  textfmt.py  transcribe.py  types.py
examples/: README.md
tests/: test_midi.py  test_textfmt.py
